@@ -1,5 +1,10 @@
 2008-07-12  Thomas Vander Stichele  <thomas at apestaart dot org>
 
+	* test/test_stdlib.py:
+	  Rename and document test.
+
+2008-07-12  Thomas Vander Stichele  <thomas at apestaart dot org>
+
 	* test/common.py:
 	* test/expected/test_zope_interface:
 	* test/input/test_zope_interface.py:
